# dragonglass_old2

./: .gitignore  Cargo.toml  README.md  build.rs  index.md  settings.toml
.github/: auto_assign-issues.yml
assets/shaders/environment/: post_process.frag.glsl
assets/shaders/pbr/: pbr.frag.glsl  pbr.vert.glsl
src/: app.rs  camera.rs  gui.rs  input.rs  main.rs  script.rs  system.rs
src/renderer/: mod.rs
src/renderer/vulkan/: gui.rs  mod.rs  renderer.rs
src/renderer/vulkan/asset/: gltf.rs  mod.rs
src/renderer/vulkan/core/: context.rs  debug_layer.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  queue_family_index_set.rs  surface.rs
src/renderer/vulkan/core/sync/: fence.rs  mod.rs  semaphore.rs  synchronization_set.rs
src/renderer/vulkan/environment/: brdflut.rs  hdr.rs  irradiance.rs  mod.rs  offscreen.rs  prefilter.rs  skybox.rs
src/renderer/vulkan/handles/: forward.rs  mod.rs  offscreen.rs
src/renderer/vulkan/pbr/: mod.rs  pbr_pipeline.rs  scene.rs
src/renderer/vulkan/pbr/environment/: brdflut.rs  cube.rs  hdr.rs  irradiance.rs  prefilter.rs  skybox.rs
src/renderer/vulkan/render/: compute_pipeline.rs  descriptor_pool.rs  descriptor_set_layout.rs  framebuffer.rs  graphics_pipeline.rs  mod.rs  pipeline_layout.rs  render_pipeline.rs  renderpass.rs  swapchain.rs
src/renderer/vulkan/render/strategy/: forward.rs  mod.rs
src/renderer/vulkan/resource/: buffer.rs  command_pool.rs  dummy.rs  mod.rs  shader.rs
src/renderer/vulkan/resource/image/: image_view.rs  mod.rs  sampler.rs  texture.rs
src/renderer/vulkan/strategy/: forward.rs  mod.rs
