[package]
name = "dragonglass"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
winit = "0.22.2"
log = "0.4.8"
simplelog = { version = "0.8.0", features = ["termcolor"] }
snafu = "0.6.7"
config = "0.10.1"
serde = { version = "1.0.113", features = ["derive"] }
nalgebra-glm = "0.7.0"

# Opted into by features
ash = { version = "0.31.0", optional = true }
vk-mem = { version = "0.2.2", optional = true }
raw-window-handle = { version = "0.3.3", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["windef", "libloaderapi"] }

[features]
default = ["vulkan"]
vulkan = ["ash", "vk-mem", "raw-window-handle"]
vulkan-validation = []
